# KeryxTalos

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  LICENSE  MANIFEST.in  README.md  docker-compose.yml  pyproject.toml  settings.toml  verification_results.txt
.github/workflows/: ci.yml  release.yml
.nf/: project.json
.serena/: project.yml
docs/: README.md  ai-trading-architecture.md  api.md  architecture.md  configuration.md  development.md  optimization.md  quickstart.md  strategy-guide.md  trading-guide.md  user-guide.md
docs/plans/: ai-first-implementation-plan.md  strategic-analysis.md
keryxflow/: __init__.py  config.py  main.py
keryxflow/aegis/: __init__.py  circuit.py  guardrails.py  portfolio.py  profiles.py  quant.py  risk.py  trailing.py
keryxflow/agent/: __init__.py  analysis_tools.py  analyst_agent.py  base_agent.py  cognitive.py  execution_tools.py  executor.py  executor_agent.py  multi_agent.py  orchestrator.py  perception_tools.py  reflection.py  risk_agent.py  scheduler.py  session.py  strategy.py  strategy_gen.py  tools.py
keryxflow/api/: __init__.py  models.py  server.py  webhook.py
keryxflow/backtester/: __init__.py  data.py  engine.py  html_report.py  monte_carlo.py  report.py  runner.py  walk_forward.py
keryxflow/core/: database.py  engine.py  events.py  glossary.py  logging.py  models.py  mtf_buffer.py  repository.py  safeguards.py
keryxflow/data/: keryxflow.db
keryxflow/exchange/: __init__.py  adapter.py  bybit.py  client.py  demo.py  kraken.py  okx.py  orders.py  paper.py
keryxflow/hermes/: __init__.py  app.py  onboarding.py  theme.tcss
keryxflow/hermes/widgets/: __init__.py  aegis.py  agent.py  backtest.py  balance.py  chart.py  help.py  logs.py  oracle.py  order_modal.py  positions.py  splash.py  stats.py
keryxflow/memory/: __init__.py  episodic.py  manager.py  semantic.py
keryxflow/notifications/: __init__.py  base.py  discord.py  manager.py  telegram.py
keryxflow/optimizer/: __init__.py  comparator.py  engine.py  grid.py  report.py  runner.py
keryxflow/oracle/: __init__.py  brain.py  feeds.py  mtf_analyzer.py  mtf_signals.py  signals.py  technical.py
keryxflow/strategies/: __init__.py  dca.py  grid.py
keryxflow/web/: dashboard.py
keryxflow/web/templates/: index.html
scripts/: inspect_db.py  run.py  test_app_init.py  test_binance.py  test_paper_trading.py
tests/: __init__.py  conftest.py  verify.py
tests/integration/: __init__.py  test_agent_session_e2e.py
tests/test_aegis/: __init__.py  test_circuit.py  test_guardrails.py  test_quant.py  test_risk.py  test_trailing.py
tests/test_agent/: test_analysis.py  test_analyst_agent.py  test_cognitive.py  test_execution.py  test_executor.py  test_executor_agent.py  test_multi_agent.py  test_orchestrator.py  test_perception.py  test_reflection.py  test_risk_agent.py  test_scheduler.py  test_session.py  test_strategy.py  test_strategy_gen.py  test_tools.py
tests/test_api/: test_server.py  test_webhook.py
tests/test_backtester/: test_data.py  test_engine.py  test_html_report.py  test_monte_carlo.py  test_walk_forward.py
tests/test_core/: test_engine.py  test_engine_ai_mode.py  test_engine_trailing.py  test_mtf_buffer.py  test_repository.py  test_safeguards.py
tests/test_exchange/: __init__.py  test_adapter.py  test_bybit.py  test_client.py  test_demo.py  test_kraken.py  test_okx.py  test_paper.py
tests/test_hermes/: __init__.py  test_app.py  test_help.py  test_onboarding.py  test_widgets.py
tests/test_memory/: test_episodic.py  test_manager.py  test_semantic.py
tests/test_notifications/: test_base.py  test_discord.py  test_manager.py  test_telegram.py
tests/test_optimizer/: test_comparator.py  test_engine.py  test_grid.py  test_report.py
tests/test_oracle/: __init__.py  test_brain.py  test_feeds.py  test_mtf_analyzer.py  test_mtf_signals.py  test_signals.py  test_technical.py
tests/test_strategies/: test_dca.py  test_grid.py
