[tool.poetry]
name = "keryxflow"
version = "0.17.0"
description = "A hybrid AI & quantitative trading engine for cryptocurrency markets"
authors = ["KeryxFlow Contributors"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/KeryxFlow-Project/Kerykeion"
homepage = "https://github.com/KeryxFlow-Project/Kerykeion"
keywords = ["trading", "cryptocurrency", "bitcoin", "ai", "algorithmic-trading"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business :: Financial :: Investment",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Framework :: AsyncIO",
]
packages = [{include = "keryxflow"}]

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/KeryxFlow-Project/Kerykeion/issues"
"Changelog" = "https://github.com/KeryxFlow-Project/Kerykeion/blob/main/CHANGELOG.md"

[tool.poetry.scripts]
keryxflow = "keryxflow.main:run"
keryxflow-backtest = "keryxflow.backtester.runner:main"
keryxflow-optimize = "keryxflow.optimizer.runner:main"
keryxflow-strategy = "keryxflow.agent.strategy_gen:main"

[tool.poetry.dependencies]
python = "^3.12"

# Core
pydantic = "^2.0"
pydantic-settings = "^2.0"
tomli = "^2.0"

# Database
sqlmodel = "^0.0.14"
aiosqlite = "^0.19"

# Exchange
ccxt = "^4.0"

# Analysis
numpy = ">=2.0"
pandas = "^2.0"
pandas-ta = ">=0.3.14b0"
matplotlib = ">=3.5"

# AI
langchain = ">=0.1,<1.0"
langchain-anthropic = ">=0.1,<1.0"

# News/Feeds
feedparser = "^6.0"
httpx = "^0.27"

# Interface
textual = "^0.50"

# API
fastapi = ">=0.109,<1.0"
uvicorn = {version = ">=0.27", extras = ["standard"]}
websockets = ">=12.0"

# Utils
python-dotenv = "^1.0"
structlog = "^24.0"
tenacity = "^8.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0"
pytest-asyncio = "^0.23"
pytest-cov = "^4.0"
pytest-mock = "^3.0"
ruff = "^0.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "ARG",    # flake8-unused-arguments
    "SIM",    # flake8-simplify
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "B008",   # do not perform function calls in argument defaults
]

[tool.ruff.lint.isort]
known-first-party = ["keryxflow"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-v --tb=short"

[tool.coverage.run]
source = ["keryxflow"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
]
